--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   uuid: ^4.2.1
   connectivity_plus: ^5.0.2
   logger: ^2.0.2+1
+  device_info_plus: ^10.1.0
   
   # HTTP Client
   dio: ^5.4.0
