--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   connectivity_plus: ^5.0.2
   logger: ^2.0.2+1
   device_info_plus: ^10.1.0
+  google_fonts: ^6.1.0
   
   # HTTP Client
   dio: ^5.4.0
