--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,8 @@ dependencies:
   # State Management
   flutter_riverpod: ^2.4.9
   riverpod_annotation: ^2.3.3
+  flutter_hooks: ^0.20.5
+  hooks_riverpod: ^2.4.9
   
   # Supabase Integration
   supabase_flutter: ^2.0.0
@@ -32,6 +34,13 @@ dependencies:
   logger: ^2.0.2+1
   device_info_plus: ^10.1.0
   google_fonts: ^6.1.0
+  
+  # Modern UI & Animations
+  flutter_staggered_grid_view: ^0.7.0
+  flutter_animate: ^4.5.0
+  flex_color_scheme: ^7.3.1
+  lottie: ^3.1.2
+  flutter_svg: ^2.0.9
   
   # HTTP Client
   dio: ^5.4.0
@@ -56,3 +65,4 @@ flutter:
   uses-material-design: true
   assets:
     - .env
+    - assets/onboarding/
