--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: take_note
-description: "A new Flutter project."
+description: "Take Note - Modern AI-powered note-taking app"
 publish_to: 'none'
 version: 0.1.0
 
